package com.wali.live.proto;

option java_package = "com.wali.live.proto";
option java_outer_classname = "LiveMicProto";

message MicSubViewPos {
    required float topXScale   = 1; //子视图左上角X在实际推流视频中的比例
    required float topYScale   = 2; //子视图左上角Y在实际推流视频中的比例
    required float widthScale  = 3; //子视图宽度在实际推流视频中的比例
    required float heightScale = 4; //子视图高度左上角在推流视频中的比例
}

message MicInfo {
    required uint64 micuid            = 1; //连麦的观众id
    optional MicSubViewPos subViewPos = 2; //子视图的比例位置
    optional string mic_liveid        = 3; //连麦对方房间号
    optional uint32 type              = 4; //0:主播与观众连麦 1：主播与主播连麦
}

//mic开始消息
message MicBeginMessage {
    required uint64 zuid          = 1; //主播用户id
    required string liveId        = 2; //房间号
    required MicInfo micInfo      = 3; //连麦的信息
    optional bool enableViewerMic = 4; //是否允许观众端发起连麦（true：允许）
    optional uint32 type          = 5; //0:主播与观众连麦 1：主播与主播连麦
}

//mic结束消息
message MicEndMessage {
    required uint64 zuid          = 1; //主播用户id
    required string liveId        = 2; //房间号
    required MicInfo micInfo      = 3; //连麦的信息
    optional bool enableViewerMic = 4; //是否允许观众端发起连麦（true：允许）
    optional uint32 type          = 5; //0:主播与观众连麦 1：主播与主播连麦
}